--- a/app/tbapp/public/index.html
+++ b/app/tbapp/public/index.html
@@ -41,7 +41,7 @@
   <title>TB App</title>
 </head>
 
-<body>
+<body class='bg'>
   <noscript>
       You need to enable JavaScript to run this app.
   </noscript>
